# project-vega

./: .env  .gitignore  README.md  pyproject.toml
backend/: app.py
frontend/: app.js  index.html  style.css
