[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "fastapi==0.111.1",
    "uvicorn[standard]==0.24.0",
    "requests==2.31.0",
    "pydantic==2.11.0",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
